# sonic-frontiers-playable-extra-characters

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Mod.ini.in  README.md  mod.ini.in
resources/: config.json
resources/physics-presets/invalidfile/raw/mods/angryzor/character_normalizer/: player_common_extra_cyber.pac
resources/physics-presets/weezley/raw/mods/angryzor/character_normalizer/: player_common_extra_cyber.pac
src/: CMakeLists.txt  CharacterSelectionManager.cpp  CharacterSelectionManager.h  DllMain.cpp  ObjSwitchCharacterVolume.cpp  ObjSwitchCharacterVolume.h  Pch.h  bootstrap.cpp
